@@ -36,7 +36,7 @@
 
   <groupId>be.yildiz-games</groupId>
   <artifactId>parent</artifactId>
-  <version>5.0.1</version>
+  <version>5.0.2</version>
 
   <licenses>
     <license>
@@ -71,7 +71,7 @@
     <java.version>17</java.version>
 
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-    <kotlin.version>1.5.30</kotlin.version>
+    <kotlin.version>1.6.0</kotlin.version>
 
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -104,28 +104,27 @@
     <maven.plugin.release.version>2.5.3</maven.plugin.release.version>
     <maven.plugin.scm.version>1.12.0</maven.plugin.scm.version>
 
-    <maven.plugin.sonar.version>3.9.0.2155</maven.plugin.sonar.version>
+    <maven.plugin.sonar.version>3.9.1.2184</maven.plugin.sonar.version>
     <maven.plugin.jacoco.version>0.8.7</maven.plugin.jacoco.version>
     <maven.plugin.exec.version>3.0.0</maven.plugin.exec.version>
     <maven.plugin.build-helper.version>3.2.0</maven.plugin.build-helper.version>
-    <maven.plugin.pitest.version>1.7.0</maven.plugin.pitest.version>
+    <maven.plugin.pitest.version>1.7.3</maven.plugin.pitest.version>
     <maven.plugin.nexus.version>1.6.8</maven.plugin.nexus.version>
     <maven.plugin.nexus.serverId>ossrh</maven.plugin.nexus.serverId>
     <maven.plugin.nexus.nexusUrl>https://oss.sonatype.org/</maven.plugin.nexus.nexusUrl>
     <maven.plugin.nexus.autoReleaseAfterClose>true</maven.plugin.nexus.autoReleaseAfterClose>
     <maven.plugin.version.version>2.8.1</maven.plugin.version.version>
-    <maven.plugin.owasp-dependency-check.version>6.3.1</maven.plugin.owasp-dependency-check.version>
+    <maven.plugin.owasp-dependency-check.version>6.5.0</maven.plugin.owasp-dependency-check.version>
     <sonar.binaries>${project.basedir}/target/classes</sonar.binaries>
 
-    <dependency.junit.version>5.8.0</dependency.junit.version>
-    <dependency.cucumber.version>6.11.0</dependency.cucumber.version>
+    <dependency.junit.version>5.8.1</dependency.junit.version>
+    <dependency.cucumber.version>7.0.0</dependency.cucumber.version>
     <dependency.awaitility.version>1.7.0</dependency.awaitility.version>
 
-    <argLine>--illegal-access=permit</argLine>
   </properties>
 
   <prerequisites>
-    <maven>3.5.3</maven>
+    <maven>3.8.2</maven>
   </prerequisites>
 
   <build>
